added CMakeLists.txt to build using configure and make

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
 /required-list
 /xhost-mkfrag
+libiberty/Makefile
+libiberty/config.log
+libiberty/config.status
+libiberty/config.h
+libiberty/stamp-h
+build/
+bBuild/
+Build/
 *.swp
