still working on a way to properly import

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 3.8)
 
 project(ex-iberty)
 
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+
 include(ExternalProject)
 ExternalProject_Add(libiberty
   SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/libiberty
