working to get it to work

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,10 @@
 cmake_minimum_required(VERSION 3.11)
 
-project(ex-iberty)
+project(GCC_EXTRACTED.IBERTY 
+  VERSION 0.1.0 
+  DESCRIPTION "Iberty library extracted from gcc"
+  LANGUAGES CXX
+  )
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
@@ -11,9 +15,13 @@ ExternalProject_Add(libiberty
   BUILD_COMMAND ${MAKE}
   )
 
-add_executable(ex-iberty src/main.cpp)
+add_library(GCC_EXTRACTED.IBERTY OBJECT)
 
-target_include_directories(ex-iberty PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
-target_link_libraries(ex-iberty PUBLIC ${CMAKE_CURRENT_BINARY_DIR}/libiberty-prefix/src/libiberty-build/libiberty.a)
+target_sources(GCC_EXTRACTED.IBERTY PRIVATE libiberty/dummy.cpp )
+
+target_include_directories(GCC_EXTRACTED.IBERTY SYSTEM PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
+target_link_libraries(GCC_EXTRACTED.IBERTY PUBLIC ${CMAKE_CURRENT_BINARY_DIR}/libiberty-prefix/src/libiberty-build/libiberty.a)
+
+add_library(GCC_EXTRACTED::IBERTY ALIAS GCC_EXTRACTED.IBERTY)
 
 
