--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,4 +24,6 @@ target_link_libraries(GCC_EXTRACTED.IBERTY PUBLIC ${CMAKE_CURRENT_BINARY_DIR}/li
 
 add_library(GCC_EXTRACTED::IBERTY ALIAS GCC_EXTRACTED.IBERTY)
 
+set_target_properties(GCC_EXTRACTED::IBERTY PROPERTIES IMPORTED_GLOBAL TRUE)
+
 
