--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,3 +9,5 @@ ExternalProject_Add(GCC_EXTRACTED_IBERTY
   BUILD_COMMAND ${MAKE}
 ) 
 
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
+
