--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ ExternalProject_Add(GCC_EXTRACTED_IBERTY
   SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/libiberty 
   CONFIGURE_COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/libiberty/configure --prefix=${CMAKE_CURRENT_BINARY_DIR}/libiberty
   BUILD_COMMAND ${MAKE}
+  INSTALL_COMMAND ""
 ) 
 
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
